--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ dependencies {
 
     implementation('com.graphql-java:graphql-spring-boot-starter:3.6.0')
     implementation('com.graphql-java:graphql-java-tools:3.2.0')
-
+    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.4.1'
     compileOnly('org.projectlombok:lombok')
     runtimeOnly('com.h2database:h2')
 }
