feat: implement poem query base
- poem entity
- write poem query schema
- implement poem query resolver

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ repositories {
     jcenter()
 }
 
+ext['kotlin.version'] = '1.3.10'
+
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
