feat: add dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -39,5 +39,8 @@ dependencies {
 
     compileOnly('org.projectlombok:lombok')
     runtimeOnly('com.h2database:h2')
+    
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
 
